# game-logic

./: .gitignore  .project  .travis.yml  Action.cpp  Action.h  CMakeLists.txt  DOXYFILE  Dockerfile  GameController.cpp  GameController.h  GameModel.cpp  GameModel.h  Interference.cpp  Interference.h  README.md  SopraGameAction.cpp  SopraGameAction.h  SopraGameController.cpp  SopraGameController.h  SopraGameModel.cpp  SopraGameModel.h  generateDocumentationAndDeploy.sh  run-sonarqube.sh  sonar-project.properties  sopraGameModel.cpp  sopraGameModel.h
Develop/html/: _action_8cpp.html  _action_8h.html  _action_8h_source.html  _game_controller_8cpp.html  _game_controller_8h.html  _game_controller_8h_source.html  _game_model_8h.html  _game_model_8h_source.html  _interference_8cpp.html  _interference_8h.html  _interference_8h_source.html  _shared_ptr_serialization_8h_source.html  annotated.html  classes.html  classgame_controller_1_1_action.html  classgame_controller_1_1_block_cell.html  classgame_controller_1_1_impulse.html  classgame_controller_1_1_interference.html  classgame_controller_1_1_move.html  classgame_controller_1_1_ranged_attack.html  classgame_controller_1_1_shot.html  (+36 more)
Tests/: CMakeLists.txt  Controller.cpp  Interferences.cpp  Model.cpp  Move.cpp  Shot.cpp  SopraGameAction.cpp  SopraGameController.cpp  SopraGameModel.cpp  Wrest.cpp  main.cpp  setup.cpp  setup.h
src/: Action.cpp  Action.h  GameController.cpp  GameController.h  GameModel.cpp  GameModel.h  Interference.cpp  Interference.h  SharedPtrSerialization.h  conversions.cpp  conversions.h
(+176 files in other folders)
